--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@
     <!-- Блок с главной информацией -->
     <main>
       <!-- Блок-герой -->
-      <section class=""></section>
+      <section class="hero">
+        <h1 class="hero-title">Falcon Heavy</h1>
+        <p class="hero-text">
+          The most powerful operational rocket in the world by a factor of two
+        </p>
+        <div class="hero-container">
+          <img
+            class="hero-container__img"
+            src="./img/earth.jpg"
+            alt="earth photo"
+          />
+        </div>
+      </section>
       <section class=""></section>
     </main>
 
