--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       <section class="hero">
         <h1 class="hero-title">Falcon Heavy</h1>
         <p class="hero-text">
-          The most powerful operational rocket in the world by a factor of two
+          The most powerful operational rocket <br />
+          in the world by a factor of two
         </p>
         <div class="hero-container">
           <img
