Добавляет блок-герой

--- a/index.html
+++ b/index.html
@@ -72,17 +72,15 @@
     <main>
       <!-- Блок-герой -->
       <section class="hero">
-        <h1 class="hero-title">Falcon Heavy</h1>
-        <p class="hero-text">
-          The most powerful operational rocket <br />
-          in the world by a factor of two
-        </p>
-        <div class="hero-container">
-          <img
-            class="hero-container__img"
-            src="./img/earth.jpg"
-            alt="earth photo"
-          />
+        <div class="container">
+          <h1 class="hero-title">Falcon Heavy</h1>
+          <p class="hero-text">
+            The most powerful operational rocket <br />
+            in the world by a factor of two
+          </p>
+          <div class="hero-container">
+            <img src="./img/earth.jpg" alt="earth photo" />
+          </div>
         </div>
       </section>
       <section class=""></section>
