Добавляет описание ракеты и блок с ней

--- a/index.html
+++ b/index.html
@@ -83,7 +83,53 @@
           </div>
         </div>
       </section>
-      <section class=""></section>
+      <section class="overview">
+        <div class="container">
+          <h1 class="overview-title">
+            Falcon Heavy <br />
+            Overview
+          </h1>
+          <ul class="overview-list">
+            <li class="overview-item">
+              <p class="overview-text">
+                HEIGHT<span class="overview-wrap__kg">70 m /</span
+                ><span class="overview-wrap__lb"> 229.6 ft</span>
+              </p>
+            </li>
+            <li class="overview-item">
+              <p class="overview-text">
+                DIAMETER<span class="overview-wrap__kg">12.2 m /</span
+                ><span class="overview-wrap__lb"> 39.9 ft</span>
+              </p>
+            </li>
+            <li class="overview-item">
+              <p class="overview-text">
+                MASS<span class="overview-wrap__kg">1,420,788 kg /</span
+                ><span class="overview-wrap__lb"> 3,125,735 lb</span>
+              </p>
+            </li>
+            <li class="overview-item">
+              <p class="overview-text">
+                PAYLOAD TO LEO<span class="overview-wrap__kg">63,800 kg /</span
+                ><span class="overview-wrap__lb"> 140,660 lb</span>
+              </p>
+            </li>
+            <li class="overview-item">
+              <p class="overview-text">
+                PAYLOAD TO GTO<span class="overview-wrap__kg">26,700 kg /</span
+                ><span class="overview-wrap__lb"> 58,860 lb</span>
+              </p>
+            </li>
+            <li class="overview-item">
+              <p class="overview-text">
+                PAYLOAD TO MARS<span class="overview-wrap__kg">16,800 kg /</span
+                ><span class="overview-wrap__lb"> 37,040 lb</span>
+              </p>
+            </li>
+          </ul>
+          <img class="overview-img" src="./img/rocket.jpg" alt="" />
+        </div>
+      </section>
     </main>
 
     <!-- Футер-Подвал -->
