--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
           </h1>
           <ul class="overview-list">
             <li class="overview-item">
-              <p class="overview-text">
-                HEIGHT<span class="overview-wrap__kg">70 m /</span
-                ><span class="overview-wrap__lb"> 229.6 ft</span>
-              </p>
+              <p class="overview-text">HEIGHT</p>
+              <span class="overview-wrap__kg"
+                >70 m /<span class="overview-wrap__lb"> 229.6 ft</span></span
+              >
             </li>
             <li class="overview-item">
               <p class="overview-text">
