--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       </section>
       <section class="overview">
         <div class="container">
-          <h1 class="overview-title">
+          <h2 class="overview-title">
             Falcon Heavy <br />
             Overview
-          </h1>
+          </h2>
           <ul class="overview-list">
             <li class="overview-item">
               <p class="overview-text">HEIGHT</p>
@@ -97,36 +97,55 @@
               >
             </li>
             <li class="overview-item">
-              <p class="overview-text">
-                DIAMETER<span class="overview-wrap__kg">12.2 m /</span
-                ><span class="overview-wrap__lb"> 39.9 ft</span>
-              </p>
+              <p class="overview-text">DIAMETER</p>
+              <span class="overview-wrap__kg"
+                >12.2 m /<span class="overview-wrap__lb"> 39.9 ft</span></span
+              >
             </li>
             <li class="overview-item">
-              <p class="overview-text">
-                MASS<span class="overview-wrap__kg">1,420,788 kg /</span
-                ><span class="overview-wrap__lb"> 3,125,735 lb</span>
-              </p>
+              <p class="overview-text">MASS</p>
+              <span class="overview-wrap__kg"
+                >1,420,788 kg /<span class="overview-wrap__lb">
+                  3,125,735 lb</span
+                ></span
+              >
             </li>
             <li class="overview-item">
-              <p class="overview-text">
-                PAYLOAD TO LEO<span class="overview-wrap__kg">63,800 kg /</span
-                ><span class="overview-wrap__lb"> 140,660 lb</span>
-              </p>
+              <p class="overview-text">PAYLOAD TO LEO</p>
+              <span class="overview-wrap__kg"
+                >63,800 kg /<span class="overview-wrap__lb">
+                  140,660 lb</span
+                ></span
+              >
             </li>
             <li class="overview-item">
-              <p class="overview-text">
-                PAYLOAD TO GTO<span class="overview-wrap__kg">26,700 kg /</span
-                ><span class="overview-wrap__lb"> 58,860 lb</span>
-              </p>
+              <p class="overview-text">PAYLOAD TO GTO</p>
+              <span class="overview-wrap__kg"
+                >26,700 kg /<span class="overview-wrap__lb">
+                  58,860 lb</span
+                ></span
+              >
             </li>
             <li class="overview-item">
-              <p class="overview-text">
-                PAYLOAD TO MARS<span class="overview-wrap__kg">16,800 kg /</span
-                ><span class="overview-wrap__lb"> 37,040 lb</span>
-              </p>
+              <p class="overview-text">PAYLOAD TO MARS</p>
+              <span class="overview-wrap__kg"
+                >16,800 kg /<span class="overview-wrap__lb">
+                  37,040 lb</span
+                ></span
+              >
             </li>
           </ul>
+          <h3 class="overview-title__second">
+            UNMATCHED <br />
+            PERFORMANCE
+          </h3>
+          <p class="overview-dscrpt">
+            With more than 5 million pounds of thrust at liftoff, Falcon Heavy
+            is the most capable rocket flying. By comparison, the liftoff thrust
+            of the Falcon Heavy equals approximately eighteen 747 aircraft at
+            full power. Falcon Heavy can lift the equivalent of a fully loaded
+            737 jetliner—complete with passengers, luggage and fuel—to orbit.
+          </p>
           <img class="overview-img" src="./img/rocket.jpg" alt="" />
         </div>
       </section>
