--- a/index.html
+++ b/index.html
@@ -155,10 +155,81 @@
 
     <footer>
       <section class="footer">
-        <div class="container footer-container">
-          <div class="footer-"></div>
-          <div class="footer-"></div>
-          <div class="footer-"></div>
+        <div class="container footer-flex">
+          <img class="footer-logo" src="./img/logo.png" alt="" />
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a
+                href="https://twitter.com/SpaceX"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Twitter</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href="https://www.youtube.com/channel/UCtI0Hodo5o5dUb67FeUjDeA"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Youtube</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href="https://www.instagram.com/spacex/"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Instagram</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href="https://www.flickr.com/people/spacex/"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Flickr</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href="https://www.linkedin.com/company/spacex"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >LinkedIn</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href="#"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Privacy</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href="#"
+                class="footer-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Policy</a
+              >
+            </li>
+          </ul>
+          <p class="footer-text">
+            For additional questions, contact<a
+              href="mailto:rideshare@spacex.com"
+              class="footer-mail"
+              >rideshare@spacex.com</a
+            >
+          </p>
+          <button class="footer-button" type="button">Contact us</button>
         </div>
       </section>
     </footer>
