--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     />
 
     <!-- Подключает стили SASS -->
-    <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
 
-    <!-- Подключает все стили через 1 файл -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- Подключает все стили через 1 файл
+    <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
   <body>
     <!-- Хедер блок -->
